--- a/chart/ibm-db2/Chart.yaml
+++ b/chart/ibm-db2/Chart.yaml
@@ -6,7 +6,10 @@ type: application
 version: 3.0.2
 appVersion: "1.0"
 
-
+dependencies:
+- name: service-account
+  version: 0.6.0
+  repository: https://charts.cloudnativetoolkit.dev
 
 
 
