--- a/chart/ibm-db2/values.yaml
+++ b/chart/ibm-db2/values.yaml
@@ -24,4 +24,4 @@ db2instance:
           resources:
             requests:
               storage: 100Gi
-          storageClassName: "ibmc-vpc-block-metro-general-purpose"
+          storageClassName: "portworx-db2-rwx-sc"
