--- a/module.yaml
+++ b/module.yaml
@@ -22,6 +22,10 @@ versions:
         refs:
           - source: https://github.com/cloud-native-toolkit/terraform-gitops-db2u-operator.git
             version: ">= 1.0.0"
+      - id: portworx_module
+        refs:
+          - source: https://github.com/cloud-native-toolkit/terraform-portworx.git
+            version: ">= 1.0.0"
     variables:
       - name: gitops_config
         moduleRef:
