--- a/chart/ibm-db2/Chart.yaml
+++ b/chart/ibm-db2/Chart.yaml
@@ -5,11 +5,12 @@ description: A Helm chart for Kubernetes, Db2 Community Edition 11.5.4.0
 type: application
 version: 3.0.2
 appVersion: "1.0"
-
 dependencies:
-- name: service-account
-  version: 0.6.0
-  repository: https://charts.cloudnativetoolkit.dev
+  - name: ibm-db2u-operator
+    version: 0.1.0
+    repository: https://charts.cloudnativetoolkit.dev
+
+
 
 
 
