--- a/chart/ibm-db2/values.yaml
+++ b/chart/ibm-db2/values.yaml
@@ -14,7 +14,7 @@ db2instance:
       privileged: true
     environment:
       imagePullSecrets:
-      - ibm-registry
+      - ibm-entitlement-key
       dbType: db2oltp
     version: 11.5.6.0-cn3
     storage:
