--- a/chart/ibm-db2/Chart.yaml
+++ b/chart/ibm-db2/Chart.yaml
@@ -1,14 +1,14 @@
 apiVersion: v2
 name: ibm-db2
 #appVersion: 11.5.4.0
-description: A Helm chart for Kubernetes, Db2 Community Edition 11.5.4.0
+description: A Helm chart for Kubernetes, Db2 
 type: application
 version: 3.0.2
 appVersion: "1.0"
-dependencies:
-  - name: ibm-db2u-operator
-    version: 0.1.0
-    repository: https://charts.cloudnativetoolkit.dev
+#dependencies:
+  #- name: ibm-db2u-operator
+    #version: 0.1.0
+    #repository: https://charts.cloudnativetoolkit.dev
 
 
 
