subscription and instance
Signed-off-by: Yogendra Srivastava <ysrivastava@in.ibm.com>

--- a/chart/ibm-db2-instance/values.yaml
+++ b/chart/ibm-db2-instance/values.yaml
@@ -1,9 +1,10 @@
 db2instance:
-  name: db2oltp-cr7
-     
+  name: db2oltp-cr
+  cpd_namespace: gitops-cp4d-instance   
   spec:
    license:
     accept: true
     license: Community     # Specify the license you purchased
     db_type: db2oltp
+
 
