--- a/charts/ibm-cpd-db2-instance/templates/instance.yaml
+++ b/charts/ibm-cpd-db2-instance/templates/instance.yaml
@@ -3,5 +3,13 @@ apiVersion: databases.cpd.ibm.com/v1
 kind: Db2oltpService       
 metadata:
   name: {{ .Values.db2instance.name }}
-spec:
-  {{- toYaml .Values.db2instance.spec | nindent 2 }}
+  namespace: {{ .Values.cpd_namespace }}
+spec:  
+  license:
+    accept: true
+    license: Advanced     # Specify the license you purchased
+
+
+
+    
+    
