--- a/module.yaml
+++ b/module.yaml
@@ -1,7 +1,8 @@
-name: "gitops-db2-oltp"
+name: gitops-db2-oltp
 type: gitops
-description: "Module to populate a gitops repo wih the resources to provision IBM DB2"
+description: Module to populate a gitops repo wih the resources to provision IBM DB2
 tags:
+  - db2
   - tools
   - gitops
 versions:
