--- a/module.yaml
+++ b/module.yaml
@@ -19,22 +19,22 @@ versions:
         refs:
           - source: github.com/cloud-native-toolkit/terraform-gitops-namespace.git
             version: ">= 1.0.0"
-      - id: gitops_ibm_catalogs
-        refs:
-          - source: github.com/cloud-native-toolkit/terraform-gitops-cp-catalogs.git
-            version: ">= 1.0.0"
-      - id: ibm-common-service
-        refs:
-          - source: github.com/cloud-native-toolkit/terraform-gitops-cp-foundational-services.git
-            version: ">= 1.0.0"
-      - id: gitops-cp4d-operator
-        refs:
-          - source: github.com/cloud-native-toolkit/terraform-gitops-cp4d-operator.git
-            version: ">= 0.0.1"
-      - id: gitops-cp4d-instance
-        refs:
-          - source: github.com/cloud-native-toolkit/terraform-gitops-cp4d-instance.git
-            version: ">= 0.0.1"      
+      # - id: gitops_ibm_catalogs
+      #   refs:
+      #     - source: github.com/cloud-native-toolkit/terraform-gitops-cp-catalogs.git
+      #       version: ">= 1.0.0"
+      # - id: ibm-common-service
+      #   refs:
+      #     - source: github.com/cloud-native-toolkit/terraform-gitops-cp-foundational-services.git
+      #       version: ">= 1.0.0"
+      # - id: gitops-cp4d-operator
+      #   refs:
+      #     - source: github.com/cloud-native-toolkit/terraform-gitops-cp4d-operator.git
+      #       version: ">= 0.0.1"
+      # - id: gitops-cp4d-instance
+      #   refs:
+      #     - source: github.com/cloud-native-toolkit/terraform-gitops-cp4d-instance.git
+      #       version: ">= 0.0.1"      
       - id: gitops-db2
         refs:
           - source: github.com/cloud-native-toolkit/terraform-gitops-db2u-operator.git
