--- a/charts/ibm-cpd-db2-subscription/values.yaml
+++ b/charts/ibm-cpd-db2-subscription/values.yaml
@@ -5,6 +5,7 @@
 name: ibm-db2oltp-cp4d-operator-catalog-subscription
 operator_namespace: cpd-operators
 common_services_namespace: ibm-common-services
+cpd_namespace: gitops-cp4d-instance
 syncWave: "-5"
 spec:
   channel: v1.0
