--- a/charts/ibm-cpd-db2-subscription/support/configmap.snippet.yaml
+++ b/charts/ibm-cpd-db2-subscription/support/configmap.snippet.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: db2oltp-operandreg-cm
+  namespace: {{ .Values.cpd_namespace }}
   labels:
     app: db2oltpconfig
   annotations:
