--- a/charts/ibm-cpd-db2-subscription/templates/job.yaml
+++ b/charts/ibm-cpd-db2-subscription/templates/job.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: db2oltp-operandreg-job
+  namespace: {{ .Values.cpd_namespace }}
   annotations:
     argocd.argoproj.io/sync-wave: "-10"
 spec:
