--- a/charts/ibm-cpd-db2-subscription/templates/configmap.yaml
+++ b/charts/ibm-cpd-db2-subscription/templates/configmap.yaml
@@ -11,11 +11,11 @@ data:
     #!/bin/sh
 
     ZEN_OPERATORS_NAMESPACE="${ZEN_OPERATORS_NAMESPACE}"
-    COMMAN_SERVICES_NAMESPACE="${COMMAN_SERVICES_NAMESPACE}"
+    COMMON_SERVICES_NAMESPACE="${COMMON_SERVICES_NAMESPACE}"
 
-    echo "success 1"
+    echo "success 1 : "${COMMON_SERVICES_NAMESPACE}""
 
-    oc get operandregistry common-service -n ${COMMAN_SERVICES_NAMESPACE} -o json > /temp/operandregistry.json
+    oc get operandregistry common-service -n ${COMMON_SERVICES_NAMESPACE} -o json > /temp/operandregistry.json
 
     echo "success 2"
 
