--- a/charts/ibm-cpd-db2-subscription/templates/subscription.yaml
+++ b/charts/ibm-cpd-db2-subscription/templates/subscription.yaml
@@ -8,5 +8,19 @@ metadata:
 spec:
   {{- toYaml .Values.spec | nindent 2 }}
 
+---
+
+apiVersion: operators.coreos.com/v1alpha1
+kind: Subscription
+metadata:
+  name: ibm-namespace-scope-operator
+  namespace: {{ .Values.operator_namespace }}
+spec:
+  channel: v3
+  installPlanApproval: Automatic
+  name: ibm-namespace-scope-operator
+  source: ibm-operator-catalog
+  sourceNamespace: openshift-marketplace
+
 
   
