--- a/charts/ibm-cpd-db2-subscription/templates/configmap.yaml
+++ b/charts/ibm-cpd-db2-subscription/templates/configmap.yaml
@@ -12,7 +12,7 @@ data:
 
     ZEN_OPERATORS_NAMESPACE="${ZEN_OPERATORS_NAMESPACE}"
     COMMON_SERVICES_NAMESPACE="${COMMON_SERVICES_NAMESPACE}"
-    SOURCE_NAME="ibm-operator-catalog"
+    SOURCE_NAME="ibm-db2uoperator-catalog"
 
     oc get operandregistry common-service -n ${COMMON_SERVICES_NAMESPACE} -o json > /temp/operandregistry.json
 
