Fix for issue 9
Signed-off-by: Cloud-Native Toolkit <cloudnativetoolkit@gmail.com>

--- a/charts/ibm-cpd-db2-instance/values.yaml
+++ b/charts/ibm-cpd-db2-instance/values.yaml
@@ -1,10 +1,6 @@
-db2instance:
-  name: db2oltp-cr
-  cpd_namespace: gitops-cp4d-instance   
-  spec:
-   license:
-    accept: true
-    license: Community     # Specify the license you purchased
+db2instance_name: db2oltp-cr
+cpd_namespace: gitops-cp4d-instance   
+license: Enterprise     # Specify the license you purchased
     
 
 
