--- a/charts/ibm-cpd-db2-instance/values.yaml
+++ b/charts/ibm-cpd-db2-instance/values.yaml
@@ -1,4 +1,4 @@
-db2instance_name: db2oltp-cr
+name: db2oltp-cr
 cpd_namespace: gitops-cp4d-instance   
 license: Enterprise     # Specify the license you purchased
     
