--- a/charts/ibm-cpd-db2-instance/values.yaml
+++ b/charts/ibm-cpd-db2-instance/values.yaml
@@ -1,6 +1,7 @@
 name: db2oltp-cr
 cpd_namespace: gitops-cp4d-instance   
 license: Enterprise     # Specify the license you purchased
+syncWave: "-3"
     
 
 
