updated charts to remove hardcoded values of cp4d instance namespace

--- a/charts/ibm-cpd-db2-operandregistry/values.yaml
+++ b/charts/ibm-cpd-db2-operandregistry/values.yaml
@@ -1,2 +1,2 @@
-operator_namespace: cpd-operators
-common_services_namespace: ibm-common-services
+# operator_namespace: cpd-operators
+# common_services_namespace: ibm-common-services
